--- a/automations.yaml
+++ b/automations.yaml
@@ -107,3 +107,17 @@
     target:
       entity_id: remote.ir_remote
   mode: single
+- id: '1735189044952'
+  description: ""
+  mode: single
+  triggers:
+    - trigger: state
+      entity_id:
+        - sensor.raypappa_home_assistant_latest_commit
+      attribute: sha
+  conditions: []
+  actions:
+    - action: shell_command.git_pull
+      data: {}
+    - action: homeassistant.reload_all
+      data: {}
