--- a/automations/calendar.yaml
+++ b/automations/calendar.yaml
@@ -1,10 +1,20 @@
-- id: '1735061482261'
-  alias: Calendar Event reminder
+- id: '1737878025977'
+  alias: Calendar notify - pixel8
   description: ''
   triggers:
   - trigger: calendar
     entity_id: calendar.kg5ohk_gmail_com
     event: start
-    offset: -0:15:0
+    offset: -0:20:0
   conditions: []
+  actions:
+  - action: notify.mobile_app_pixel_8a
+    metadata: {}
+    data:
+      message: command_activity
+      data:
+        intent_action: android.intent.action.SET_ALARM
+        intent_extras: android.intent.extra.alarm.HOUR:{{ (now() + timedelta(seconds=120)).strftime('%H')
+          }},android.intent.extra.alarm.MINUTES:{{ (now() + timedelta(seconds=120)).strftime('%M')
+          }},android.intent.extra.alarm.SKIP_UI:true
   mode: single
