--- a/automations/buttons.yaml
+++ b/automations/buttons.yaml
@@ -1,3 +1,4 @@
+---
 - id: '1738044081884'
   alias: Button Ambiance
   description: ''
@@ -17,3 +18,19 @@
     target:
       entity_id: scene.office_ambiancee
   mode: single
+- id: 'c17468b6-dd40-11ef-8c63-00155d918f67'
+  description: ""
+  mode: single
+  triggers:
+    - device_id: 7361c462858d897c2c65cc574e057b81
+      domain: hue
+      type: initial_press
+      subtype: 1
+      unique_id: c5bc7b4c-a04e-4248-8ec7-de20c3ca926b
+      trigger: device
+  conditions: []
+  actions:
+    - type: turn_off
+      device_id: 17ede8441b0d96619f9255122894377f
+      entity_id: e273724e036742495ef4a2ebe8655158
+      domain: light
