--- a/automations/buttons.yaml
+++ b/automations/buttons.yaml
@@ -21,6 +21,7 @@
 - id: 'c17468b6-dd40-11ef-8c63-00155d918f67'
   description: ""
   mode: single
+  alias: Bedside Light Toggle
   triggers:
     - device_id: 7361c462858d897c2c65cc574e057b81
       domain: hue
@@ -30,7 +31,7 @@
       trigger: device
   conditions: []
   actions:
-    - type: turn_off
+    - type: toggle
       device_id: 17ede8441b0d96619f9255122894377f
       entity_id: e273724e036742495ef4a2ebe8655158
       domain: light
