--- a/scenes.yaml
+++ b/scenes.yaml
@@ -154,3 +154,229 @@
       state: 'off'
   icon: mdi:ceiling-light-multiple
   metadata: {}
+- id: '1762140949366'
+  name: Bedside light good morning
+  entities:
+    light.craig_bedside_light:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - 'off'
+      - candle
+      - fire
+      - prism
+      - sparkle
+      - opal
+      - glisten
+      - underwater
+      - cosmos
+      - sunbeam
+      - enchant
+      - sunrise
+      - sunset
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect: 'off'
+      color_mode: color_temp
+      brightness: 3
+      color_temp_kelvin: 2000
+      color_temp: 500
+      hs_color:
+      - 30.601
+      - 94.547
+      rgb_color:
+      - 255
+      - 137
+      - 14
+      xy_color:
+      - 0.598
+      - 0.383
+      mode: normal
+      dynamics: none
+      friendly_name: Bedroom Craig Bedside Light
+      supported_features: 44
+      state: 'on'
+  metadata: {}
+- id: '1762141105041'
+  name: Bedside light good morning - post
+  entities:
+    light.craig_bedside_light:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - 'off'
+      - candle
+      - fire
+      - prism
+      - sparkle
+      - opal
+      - glisten
+      - underwater
+      - cosmos
+      - sunbeam
+      - enchant
+      - sunrise
+      - sunset
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect: 'off'
+      color_mode: color_temp
+      brightness: 230
+      color_temp_kelvin: 6535
+      color_temp: 153
+      hs_color:
+      - 54.768
+      - 1.6
+      rgb_color:
+      - 255
+      - 255
+      - 251
+      xy_color:
+      - 0.325
+      - 0.333
+      mode: normal
+      dynamics: none
+      friendly_name: Bedroom Craig Bedside Light
+      supported_features: 44
+      state: 'on'
+  metadata: {}
+- id: '1762223301474'
+  name: Relax bedside pight
+  entities:
+    light.craig_bedside_light:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - 'off'
+      - candle
+      - fire
+      - prism
+      - sparkle
+      - opal
+      - glisten
+      - underwater
+      - cosmos
+      - sunbeam
+      - enchant
+      - sunrise
+      - sunset
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect: 'off'
+      color_mode: color_temp
+      brightness: 143
+      color_temp_kelvin: 2257
+      color_temp: 443
+      hs_color:
+      - 29.599
+      - 82.123
+      rgb_color:
+      - 255
+      - 149
+      - 46
+      xy_color:
+      - 0.572
+      - 0.389
+      mode: normal
+      dynamics: none
+      friendly_name: Bedroom Craig Bedside Light
+      supported_features: 44
+      state: 'on'
+  metadata: {}
+- id: '1762822951874'
+  name: Office relax
+  entities:
+    light.hue_lightstrip_plus_1:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - 'off'
+      - candle
+      - fire
+      - prism
+      - sparkle
+      - opal
+      - glisten
+      - underwater
+      - cosmos
+      - sunbeam
+      - enchant
+      - sunrise
+      - sunset
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect: 'off'
+      color_mode: color_temp
+      brightness: 143
+      color_temp_kelvin: 2257
+      color_temp: 443
+      hs_color:
+      - 29.599
+      - 82.123
+      rgb_color:
+      - 255
+      - 149
+      - 46
+      xy_color:
+      - 0.572
+      - 0.389
+      mode: normal
+      dynamics: none
+      friendly_name: Under Office Desk
+      supported_features: 44
+      state: 'on'
+    light.office:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - 'off'
+      - candle
+      - fire
+      - prism
+      - sparkle
+      - opal
+      - glisten
+      - underwater
+      - cosmos
+      - sunbeam
+      - enchant
+      - sunrise
+      - sunset
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect: 'off'
+      color_mode: color_temp
+      brightness: 143
+      color_temp_kelvin: 2257
+      color_temp: 443
+      hs_color:
+      - 29.599
+      - 82.123
+      rgb_color:
+      - 255
+      - 149
+      - 46
+      xy_color:
+      - 0.572
+      - 0.389
+      mode: normal
+      dynamics: none
+      friendly_name: Office ceiling light
+      supported_features: 44
+      state: 'on'
+  metadata: {}
