add support for route53

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,5 +13,11 @@ climate: !include climate.yaml
 http:
   use_x_forwarded_for: true
   trusted_proxies:
-    - 172.30.33.0/24
-
+  - 10.49.48.0/23
+route53:
+  aws_access_key_id: AKIAUKXMBXZJG7ZF6YDV
+  aws_secret_access_key: !secret route53_secret_access_key
+  zone: Z07993151Z48PIABM0XKH
+  domain: stoneydavis.com
+  records:
+  - puma
